force-app/main/default/objects/MasterAnkenMeisai__c/fields/AmountBuyingincltaxLocalInput__c.field-meta.xml
<CustomField>
    <fullName>AmountBuyingincltaxLocalInput__c</fullName>
    <label>Amount Buying incl tax(Local)-Input</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>