force-app/main/default/objects/MasterAnkenMeisai__c/fields/AmountBuyingIncludingTaxUSD__c.field-meta.xml
<CustomField>
    <fullName>AmountBuyingIncludingTaxUSD__c</fullName>
    <formula>ROUND(BuyAmountUSD__c,3) + ROUND(AmountofTaxBuyingUSD__c ,3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Buying Including Tax(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>