force-app/main/default/objects/MasterAnkenMeisai__c/fields/AmountofTaxBuyingUSD__c.field-meta.xml
<CustomField>
    <fullName>AmountofTaxBuyingUSD__c</fullName>
    <formula>ROUND(BuyAmountUSD__c,3)* BuyTaxInitial__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount of Tax-Buying(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>