force-app/main/default/objects/MasterAnkenMeisai__c/fields/Ararigaku__c.field-meta.xml
<CustomField>
    <fullName>Ararigaku__c</fullName>
    <formula>SellAmountJPN__c  -  BuyAmountJPN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PROFIT(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>