force-app/main/default/objects/MasterAnkenMeisai__c/fields/BuyAmountJPN__c.field-meta.xml
<CustomField>
    <fullName>BuyAmountJPN__c</fullName>
    <formula>Suryo__c *  BuyTankaJPY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TOTAL AMOUNT OF BUYING(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>