force-app/main/default/objects/MasterAnkenMeisai__c/fields/BuyAmountUSD__c.field-meta.xml
<CustomField>
    <fullName>BuyAmountUSD__c</fullName>
    <formula>Suryo__c *  BuyTankaUSD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TOTAL AMOUNT OF BUYING(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>