force-app/main/default/objects/MasterAnkenMeisai__c/fields/BuyInTaxAmountJPY__c.field-meta.xml
<CustomField>
    <fullName>BuyInTaxAmountJPY__c</fullName>
    <description>IF (MTariff__r.wkTaxFlag__c,
BuyAmountJPN__c * (1 + BuyTaxInitial__c),
BuyAmountJPN__c
)</description>
    <formula>BuyTaxNum__c + ROUND(BuyAmountJPN__c ,0)</formula>
    <label>AMOUNT BUYING INCLUDING TAX(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>