force-app/main/default/objects/MasterAnkenMeisai__c/fields/BuyTankaJPY__c.field-meta.xml
<CustomField>
    <fullName>BuyTankaJPY__c</fullName>
    <label>UNIT PRICE OF BUYING(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>