force-app/main/default/objects/MasterAnkenMeisai__c/fields/BuyTankaUSD__c.field-meta.xml
<CustomField>
    <fullName>BuyTankaUSD__c</fullName>
    <label>UNIT PRICE OF BUYING(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>