force-app/main/default/objects/MasterAnkenMeisai__c/fields/BuyTaxInitial__c.field-meta.xml
<CustomField>
    <fullName>BuyTaxInitial__c</fullName>
    <inlineHelpText>The consumption tax ratio will be input automatically when remain Empty. Input the Tax ratio and the amount of value will be changed to amount that included the Tax. For item that is Tax-free or non-Tax, the Tax Ratio will be set 0%.</inlineHelpText>
    <label>CONSUMPTION TAX RATIO-BUYING</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>