force-app/main/default/objects/MasterAnkenMeisai__c/fields/BuyTaxNum__c.field-meta.xml
<CustomField>
    <fullName>BuyTaxNum__c</fullName>
    <formula>ROUND (BuyAmountJPN__c ,0)* BuyTaxInitial__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AMOUNT OF TAX-BUYING(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>