force-app/main/default/objects/MasterAnkenMeisai__c/fields/BuyTaxShow__c.field-meta.xml
<CustomField>
    <fullName>BuyTaxShow__c</fullName>
    <formula>BuyTaxInitial__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONSUMPTION TAX FOR CALCULATION-BUYING</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>