force-app/main/default/objects/MasterAnkenMeisai__c/fields/CreateFMSBill4__c.field-meta.xml
<CustomField>
    <fullName>CreateFMSBill4__c</fullName>
    <label>Create FMS Bill-4</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RECEIVABLE_PAYABLE_ROLLUP_STATUS</valueSetName>
    </valueSet>
</CustomField>