force-app/main/default/objects/MasterAnkenMeisai__c/fields/CreateFMSBill5__c.field-meta.xml
<CustomField>
    <fullName>CreateFMSBill5__c</fullName>
    <label>Create FMS Bill-5</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RECEIVABLE_PAYABLE_ROLLUP_STATUS</valueSetName>
    </valueSet>
</CustomField>