force-app/main/default/objects/MasterAnkenMeisai__c/fields/curr__c.field-meta.xml
<CustomField>
    <fullName>curr__c</fullName>
    <label>CURR</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>VND</fullName>
            </value>
            <value>
                <fullName>KHR</fullName>
            </value>
            <value>
                <fullName>JPY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>