force-app/main/default/objects/MasterAnkenMeisai__c/fields/CurrencyConversionForSelling__c.field-meta.xml
<CustomField>
    <fullName>CurrencyConversionForSelling__c</fullName>
    <label>Currency Conversion for Selling</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CurrencyConversion</valueSetName>
    </valueSet>
</CustomField>