force-app/main/default/objects/MasterAnkenMeisai__c/fields/KawaseBay__c.field-meta.xml
<CustomField>
    <fullName>KawaseBay__c</fullName>
    <label>EXCHANGE RATE(BUYING)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>