force-app/main/default/objects/MasterAnkenMeisai__c/fields/KawaseSel__c.field-meta.xml
<CustomField>
    <fullName>KawaseSel__c</fullName>
    <label>EXCHANGE RATE(SELLING)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>