force-app/main/default/objects/MasterAnkenMeisai__c/fields/MasterAnken__c.field-meta.xml
<CustomField>
    <fullName>MasterAnken__c</fullName>
    <label>MASTER SHIPMENT NAME</label>
    <referenceTo>MasterAnken__c</referenceTo>
    <relationshipName>MasterAnken</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>