force-app/main/default/objects/MasterAnkenMeisai__c/fields/MTariff__c.field-meta.xml
<CustomField>
    <fullName>MTariff__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Only show the available Service Master which mapped with Service Category for Search Engine</inlineHelpText>
    <label>SERVICE MASTER NAME</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>TariffMaster__c.Name</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>TariffMaster__c</referenceTo>
    <relationshipLabel>CONSOL-BUYING</relationshipLabel>
    <relationshipName>MTariff</relationshipName>
    <type>Lookup</type>
</CustomField>