force-app/main/default/objects/MasterAnkenMeisai__c/fields/PaymentTo__c.field-meta.xml
<CustomField>
    <fullName>PaymentTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CONSOL-BUYING (Payment To)</relationshipLabel>
    <relationshipName>ConsolBuying</relationshipName>
    <type>Lookup</type>
</CustomField>