force-app/main/default/objects/MasterAnkenMeisai__c/fields/ProductTax__c.field-meta.xml
<CustomField>
    <fullName>ProductTax__c</fullName>
    <formula>TEXT( MTariff__r.Zeibunrui__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Check V if the service is a Tax Item.</inlineHelpText>
    <label>TAX CATEGORY</label>
    <type>Text</type>
</CustomField>