force-app/main/default/objects/MasterAnkenMeisai__c/fields/SeikyuBangou__c.field-meta.xml
<CustomField>
    <fullName>SeikyuBangou__c</fullName>
    <label>No.</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>