force-app/main/default/objects/MasterAnkenMeisai__c/fields/Seikyusaki__c.field-meta.xml
<CustomField>
    <fullName>Seikyusaki__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>INVOICE TO</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>MasterSeikyusakis</relationshipName>
    <type>Lookup</type>
</CustomField>