force-app/main/default/objects/MasterAnkenMeisai__c/fields/SellAmountJPN__c.field-meta.xml
<CustomField>
    <fullName>SellAmountJPN__c</fullName>
    <formula>ROUND(Suryo__c *  SellTankaJPY__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TOTAL AMOUNT OF SELLING(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>