force-app/main/default/objects/MasterAnkenMeisai__c/fields/SellAmountUSD__c.field-meta.xml
<CustomField>
    <fullName>SellAmountUSD__c</fullName>
    <formula>ROUND(Suryo__c *  SellTankaUSD__c,3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TOTAL AMOUNT OF SELLING(FCY)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>