force-app/main/default/objects/MasterAnkenMeisai__c/fields/SellInTaxAmountJPY__c.field-meta.xml
<CustomField>
    <fullName>SellInTaxAmountJPY__c</fullName>
    <description>IF (MTariff__r.wkTaxFlag__c,
     SellAmountJPN__c  *  (1 + TaxInitial__c),
     SellAmountJPN__c
)</description>
    <formula>SellAmountJPN__c  *  (1 + TaxInitial__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If checked in Tax Checkbox in Service Master, the tax will be included in the amount.</inlineHelpText>
    <label>AMOUNT SELLING INCLUDING TAX</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>