force-app/main/default/objects/MasterAnkenMeisai__c/fields/SellTankaJPY__c.field-meta.xml
<CustomField>
    <fullName>SellTankaJPY__c</fullName>
    <label>UNIT PRICE OF SELLING(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>