force-app/main/default/objects/MasterAnkenMeisai__c/fields/SellTankaUSD__c.field-meta.xml
<CustomField>
    <fullName>SellTankaUSD__c</fullName>
    <label>UNIT PRICE OF SELLING(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>