force-app/main/default/objects/MasterAnkenMeisai__c/fields/SellTaxNum__c.field-meta.xml
<CustomField>
    <fullName>SellTaxNum__c</fullName>
    <formula>IF (MTariff__r.wkTaxFlag__c,
SellAmountJPN__c *  TaxInitial__c,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AMOUNT OF TAX-SELLING(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>