force-app/main/default/objects/MasterAnkenMeisai__c/fields/SerchSyubetu__c.field-meta.xml
<CustomField>
    <fullName>SerchSyubetu__c</fullName>
    <inlineHelpText>Will be able to search the Service Master which has same Service Category.</inlineHelpText>
    <label>SERVICE CATEGORY FOR SEARCH ENGINE</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FCL輸入</fullName>
            </value>
            <value>
                <fullName>FCL輸出</fullName>
            </value>
            <value>
                <fullName>LCL輸入</fullName>
            </value>
            <value>
                <fullName>LCL輸出</fullName>
            </value>
            <value>
                <fullName>通関輸入</fullName>
            </value>
            <value>
                <fullName>通関輸出</fullName>
            </value>
            <value>
                <fullName>海外現地費用</fullName>
            </value>
            <value>
                <fullName>マスター按分</fullName>
            </value>
            <value>
                <fullName>ドレー</fullName>
            </value>
            <value>
                <fullName>配送</fullName>
            </value>
            <value>
                <fullName>倉庫</fullName>
            </value>
            <value>
                <fullName>実費</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>