force-app/main/default/objects/MasterAnkenMeisai__c/fields/SERVICE_PROVIDER_VENDOR_ID__c.field-meta.xml
<CustomField>
    <fullName>SERVICE_PROVIDER_VENDOR_ID__c</fullName>
    <formula>MTariff__r.Supplier__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SERVICE PROVIDER VENDOR ID</label>
    <type>Text</type>
</CustomField>