force-app/main/default/objects/MasterAnkenMeisai__c/fields/Suryo__c.field-meta.xml
<CustomField>
    <fullName>Suryo__c</fullName>
    <defaultValue>1</defaultValue>
    <label>QUANTITY</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>