force-app/main/default/objects/MasterAnkenMeisai__c/fields/TaxShow__c.field-meta.xml
<CustomField>
    <fullName>TaxShow__c</fullName>
    <formula>TaxInitial__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Please report to System Administrator if you need to changes the consumption ratio.</inlineHelpText>
    <label>CONSUMPTION TAX FOR CALCULATION-SELLING</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>