force-app/main/default/objects/MasterAnkenMeisai__c/fields/TorihikisakiLink__c.field-meta.xml
<CustomField>
    <fullName>TorihikisakiLink__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;+  MasterAnken__r.Field1__r.Id  , MasterAnken__r.Field1__r.Name ,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CUSTOMER</label>
    <type>Text</type>
</CustomField>