force-app/main/default/objects/MasterAnkenMeisai__c/fields/TotalAmountofBuyingLocalInput__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountofBuyingLocalInput__c</fullName>
    <label>Total Amount of Buying(Local)-Input</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>