force-app/main/default/objects/MasterAnkenMeisai__c/fields/wkDefaultTax__c.field-meta.xml
<CustomField>
    <fullName>wkDefaultTax__c</fullName>
    <defaultValue>0.05</defaultValue>
    <label>wkORIGINAL TAX VALUE (NOT CHANGE)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>