force-app/main/default/objects/MasterAnkenMeisai__c/fields/wkTaxFlag__c.field-meta.xml
<CustomField>
    <fullName>wkTaxFlag__c</fullName>
    <formula>MTariff__r.wkTaxFlag__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>wkTAX-FLAG</label>
    <type>Checkbox</type>
</CustomField>