force-app/main/default/objects/MasterAnkenMeisai__c/listViews/ConsolSelling.listView-meta.xml
<ListView>
    <fullName>ConsolSelling</fullName>
    <columns>NAME</columns>
    <columns>SellTaxNum__c</columns>
    <columns>MasterAnken__c</columns>
    <columns>MTariff__c</columns>
    <columns>PaymentTo__c</columns>
    <columns>Seikyusaki__c</columns>
    <columns>Suryo__c</columns>
    <columns>SellTankaUSD__c</columns>
    <columns>TaxInitial__c</columns>
    <columns>SellAmountUSD__c</columns>
    <columns>BuyAmountUSD__c</columns>
    <columns>BuyAmountJPN__c</columns>
    <filterScope>Mine</filterScope>
    <label>Consol Selling</label>
</ListView>